--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "repositorio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,9 @@
   "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "dependencies": {
+    "bootstrap": "^5.1.3"
+  },
+  "description": ""
 }
